Finished a lot of fixes and refactoring.   * Fixed a few minor misspellings   * Fixed a bug where status messages would not show up on the AJAX refresh page   * Fixed how the AJAX refresh page handles and displays errors   * AJAX is now handled better   * Error handling has been improved   * Documentation has been improved   * Improved "clean up" logic

--- a/README
+++ b/README
@@ -33,7 +33,7 @@ you get repeated "Another user is currently refreshing people data." errors,
 the following must be done to "reset" the module:
 
   1) Restart Apache [non-graceful] (or whatever web server you are using)
-  2) Delete the variable from the {variable} table with name "uwpeople_ajax_token"
+  2) Delete the variable from the {variable} table with name "uwpeople_lock"
 
 
 Support
